styling mostly done

--- a/my-react-app/src/styling/main.scss
+++ b/my-react-app/src/styling/main.scss
@@ -6,6 +6,7 @@
 @import "./register.scss";
 @import "./grouppage.scss";
 @import "./userpage.scss";
-img {
-  width: 20px;
+
+* {
+  font-family: "Orbitron", sans-serif;
 }
