--- a/my-react-app/src/styling/navbar.scss
+++ b/my-react-app/src/styling/navbar.scss
@@ -14,18 +14,6 @@
   top: 15px;
 }
 
-.foot {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-  padding: 8px;
-  margin: 0 auto 1.5em auto;
-  height: 8vh;
-  background-color: rgb(210, 213, 214);
-  position: relative;
-  top: 15px;
-}
-
 li {
   list-style: none;
 }
@@ -43,12 +31,13 @@ ul {
 .secondary-nav {
   display: flex;
   justify-content: flex-end;
-  margin-right: 7em;
+  margin-right: 5em;
+  width: 10px;
 
-  & img {
+  img {
     width: 30px;
+    max-width: 80%;
     height: 30px;
-    margin-left: 16em;
     border-radius: 50%;
   }
 }
@@ -61,6 +50,8 @@ ul {
 
 .primary-nav a:hover {
   color: rgb(219, 22, 199) !important;
+  text-decoration: none !important;
+  transition: all 0.2s ease-in-out;
 }
 
 .secondary-nav a {
@@ -68,20 +59,13 @@ ul {
   color: black !important;
   cursor: pointer;
   font-weight: 600;
+  margin-right: 1em;
+  transition: all 0.2s ease-in-out;
 }
 
 .secondary-nav a:hover {
   color: rgb(219, 22, 199) !important;
 }
-// a {
-//   text-decoration: none !important;
-//   color: black !important;
-//   cursor: pointer;
-//   font-weight: 600;
-// }
-// a:hover {
-//   color: rgb(219, 22, 199) !important;
-// }
 
 .donut {
   margin: 6px 0 0 6px;
@@ -91,14 +75,44 @@ ul {
 //Footer
 footer {
   height: 12vh;
-  width: 100%;
-  background-color: rgb(210, 213, 214);
-  //background-color: #266388;
-  position: fixed;
+  width: 100vw;
+  background-color: #266388;
+  position: relative;
   bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.foot {
+  align-items: start;
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 8vh;
+  border: 1px solid #266388;
+  border-radius: 6px;
+  background-color: rgb(210, 213, 214);
+}
+
+@media only screen and (max-width: 768px) {
+  .secondary-nav img {
+    width: 24px;
+    height: auto;
+  }
+  .foot {
+    width: 97vw;
+    margin-right: 15px;
+  }
+  .secondary-nav {
+    margin-right: 3em;
+  }
+  .secondary-nav a {
+    margin-right: 3em;
+  }
+  footer {
+    height: 10vh;
+  }
 }
 
 .user-info {
@@ -109,6 +123,7 @@ footer {
 .user-info-wrapper {
   display: flex;
   align-items: center;
+  margin-left: 10em;
 }
 
 .user-avatar {
@@ -116,21 +131,6 @@ footer {
   height: 30px;
   border-radius: 50%;
   margin-right: 10px;
-}
-
-.user-name {
-  font-size: 1rem;
-  font-weight: bold;
-}
-
-.user-info {
-  display: flex;
-  align-items: center;
-}
-
-.user-info-wrapper {
-  display: flex;
-  align-items: center;
 }
 
 .user-avatar {
