--- a/my-react-app/src/styling/browse.scss
+++ b/my-react-app/src/styling/browse.scss
@@ -1,19 +1,20 @@
-.browsePage {
-  height: 80vh;
+.browsepage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
 .exploreImg {
   width: 15em;
 }
-
-.linkCard {
-  width: 50% !important;
+.pagination {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 1rem;
 }
 
-.page-link {
-  position: relative;
-  bottom: 40px;
-  left: 70em;
+.page-item {
+  margin: 0.5rem;
 }
 
 .games-container {
@@ -23,21 +24,38 @@
 
 .games-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 1em;
+  margin-bottom: 10vh;
+  margin-top: 2vh;
 }
 
 .game-card {
   border: 1px solid #ccc;
-  padding: 1em;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 1vw;
   color: black;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   text-align: center;
   background-color: #fff;
   transition: box-shadow 0.2s ease-in-out;
   overflow: hidden;
   position: relative;
   transition: all 0.2s ease-in-out;
+}
+
+@media only screen and (max-width: 768px) {
+  .game-card {
+    padding: 2vh 0 2vh 0;
+    width: 20em;
+    font-size: 15px;
+  }
+  .games-container {
+    margin-left: 4em;
+  }
 }
 
 .game-card:hover {
@@ -47,13 +65,15 @@
 
 .game-image {
   height: auto;
-  width: 10em;
+  width: 18em;
+  margin-top: 1em;
   margin-bottom: 0.5em;
   border-radius: 8px;
 }
 
 .game-title {
-  font-size: 1.2rem;
+  font-size: 1.7rem;
+  margin-top: 1em;
   margin-bottom: 0.5em;
 }
 
@@ -69,6 +89,7 @@
 
 .games-grid .game-card .officialLink {
   color: black;
+  font-size: 1.5rem;
   text-decoration: underline;
   display: block;
   margin-top: 0.5rem;
