--- a/my-react-app/src/styling/gamepage.scss
+++ b/my-react-app/src/styling/gamepage.scss
@@ -1,11 +1,97 @@
 .gamePage {
-  height: 80vh;
-  margin-top: 10px;
+  display: flex;
+  justify-content: center;
 }
 
-.card-body img {
-  height: auto;
-  width: 20em;
-  margin-bottom: 0.5em;
-  border-radius: 8px;
+.gamePage .card {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  width: 70%;
+  max-width: 1000px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+
+  h1 {
+    font-size: 3rem;
+    margin-bottom: 10px;
+  }
+
+  li {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+  }
+
+  img {
+    height: auto;
+    width: 25em;
+    max-width: 80%;
+    margin-bottom: 0.5em;
+    border-radius: 8px;
+  }
+
+  ul {
+    margin-top: 20px;
+    padding-left: 20px;
+  }
+
+  span {
+    font-weight: bold;
+    font-size: 22px;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+  }
+  a {
+    color: black;
+  }
+  a:hover {
+    color: #ff4500;
+    transition: all 0.3s ease-in-out;
+  }
+}
+
+.gamePage .card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5vh;
+
+  h2 {
+    margin-top: 20px;
+  }
+}
+
+.gamepagetext {
+  margin-top: 20px;
+  width: 50%;
+  height: 40vh;
+  max-height: 40%;
+  overflow: scroll;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 6px;
+
+  ul {
+    margin-bottom: 10px;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+    transition: box-shadow 0.2s ease-in-out;
+  }
+
+  ul:hover {
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
+  }
+  a {
+    text-decoration: none;
+  }
+}
+
+.exploreImg {
+  max-width: 100%;
 }
