--- a/my-react-app/src/styling/grouppage.scss
+++ b/my-react-app/src/styling/grouppage.scss
@@ -1,82 +1,289 @@
+.groupPage {
+  display: flex;
+  justify-content: center;
+}
+.groupscard {
+  display: flex;
+  justify-content: center;
+  width: 90vw;
+}
+.groupEdit {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 6px 12px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 14px;
+  margin-top: 10px;
+  margin-bottom: 4px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.input-group-text {
+  width: 50%;
+}
+
+.groupEdit:hover {
+  background-color: #3e8e41;
+}
+
+.cardetails {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  border-radius: 5px;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  width: 70%;
+  max-width: 1200px;
+  span {
+    margin-right: 10px;
+    font-weight: bold;
+  }
+}
+
+.cardetails-body {
+  display: flex;
+  flex-direction: column;
+  padding: 5vh;
+}
+
+.chatbox {
+  border-radius: 6px;
+  height: 50vh;
+  overflow: scroll;
+  border: 1px solid #ccc;
+  padding: 10px;
+  position: relative;
+}
+
+.chat-message {
+  margin-bottom: 10px;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #ccc;
+  .timestamp {
+    font-size: 12px;
+    color: #666;
+  }
+}
+
+.leavebtn {
+  border: none;
+  border-radius: 5px;
+  padding: 15px;
+  color: #fff;
+  font-size: 16px;
+  position: relative;
+  top: 7vh;
+  margin-bottom: 4vh;
+  width: 13em;
+  background-color: #007bff;
+  transition: background-color 0.3s ease;
+}
+
+.joinbtn {
+  border: none;
+  border-radius: 5px;
+  padding: 15px;
+  color: #fff;
+  width: 25em;
+  margin-top: 40px;
+  font-size: 16px;
+  width: 13em;
+  background-color: #007bff;
+  transition: background-color 0.3s ease;
+}
+
+.joinbtn:hover,
+.leavebtn:hover {
+  background-color: #0062cc;
+}
+
+@media only screen and (max-width: 768px) {
+  .leavebtn {
+    width: 10em;
+    margin-left: 1.5em;
+  }
+  .leavebtn {
+    width: 10em;
+    margin-left: 1.5em;
+  }
+  .submitbtn {
+    margin-left: 7vw;
+  }
+  .inputmessage .form-control {
+    margin-top: 6vh;
+  }
+}
+
+.savebtn {
+  background-color: #007bff;
+  border: none;
+  color: #fff;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  margin-right: 10px;
+  margin-top: 5px;
+  cursor: pointer;
+}
+
+.savebtn:hover {
+  background-color: #0062cc;
+}
+
+.cancelbtn {
+  background-color: #007bff;
+  border: none;
+  color: #fff;
+  padding: 10px;
+  font-size: 16px;
+  margin-top: 5px;
+  border-radius: 5px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.cancelbtn:hover {
+  background-color: #0062cc;
+}
+
+.messageuser {
+  font-size: 11px;
+  font-weight: bold;
+  position: relative;
+  top: 9px;
+}
+
+.group-info-section span {
+  font-size: 18px;
+}
+
 .removeMember {
   background-color: #dc3545;
   color: #fff;
-  padding: 0.5rem 1rem;
+  padding: 0 8px 0 8px;
   border-radius: 0.25rem;
   border: none;
-  font-size: 1rem;
+  font-size: 15px;
   cursor: pointer;
-  margin-left: 10px;
+  position: relative;
+  right: 31px;
   transition: background-color 0.2s ease-out;
+}
+
+.memberuser a {
+  position: relative;
+  right: 33px;
+  text-decoration: none;
+  color: #007bff;
+}
+
+.memberuser a:hover {
+  text-decoration: underline;
+  color: #0266d1 !important;
+}
+
+.member img {
+  width: 30px;
+  height: 30px;
+  margin-left: 2em;
+  margin-right: 5px;
+  border-radius: 50%;
 }
 
 .removeMember:hover {
   background-color: #c82333;
 }
 
-.groupEdit {
-  background-color: #4caf50;
-  border: none;
-  color: white;
-  padding: 8px 16px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-left: 10px;
-}
-
-.groupEdit:hover {
-  background-color: #3e8e41;
-}
-.groupPage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1em;
-  height: 150vh;
-}
-
-.card {
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  padding: 20px;
-  margin-bottom: 20px;
-  width: 1000px; /* adjust to desired width */
-}
-
-.card-body {
-  display: flex;
-  flex-direction: column;
-}
-
-.groupEdit {
-  margin-left: 0.5rem;
-}
-
-span {
-  margin-right: 10px;
-}
-.member-link {
-  text-decoration: none;
-  color: black;
-}
-.member img {
-  width: 30px;
-  height: 30px;
-  margin-left: 2em;
-  border-radius: 50%;
-}
-
-.ownergroup img {
-  width: 50px;
-  margin-left: 16em;
-  border-radius: 50%;
+.ownertext {
+  position: relative;
+  top: 10px;
+  font-weight: bold;
 }
 
 .submitbtn {
   position: relative;
+  width: 9vw;
+  top: 5vh;
+  left: 0.8vw;
+  height: 11.5vh;
+}
+
+.inputmessage .form-control {
+  height: 12vh;
+  width: 44vw;
+}
+
+@media (max-width: 768px) {
+  .inputmessage .form-control {
+    width: 18vw;
+    height: 3em;
+  }
+  .submitbtn {
+    height: 3em;
+    left: -6vw;
+    top: 11vh;
+    width: 5em;
+  }
+  .owner-info a {
+    font-size: 13px;
+  }
+  .dropdownmembers button {
+    padding: 0 1px 0 1px;
+    height: 6vh;
+    font-size: 8px;
+  }
+  .leavebtn {
+    margin-top: 2em;
+  }
+}
+
+.owner-info {
+  display: flex;
+  align-items: center;
+  position: relative;
+  right: 12px;
+
+  a {
+    color: #007bff !important;
+    text-decoration: none;
+    margin-left: 5px;
+  }
+
+  a:hover {
+    text-decoration: underline;
+    color: #0266d1 !important;
+  }
+
+  img {
+    width: 5vw;
+    height: auto;
+    border-radius: 50%;
+  }
+}
+
+.dropdownmembers {
+  display: flex;
+  justify-content: end;
+  position: relative;
+  right: 2vw;
+  bottom: 2em;
+}
+
+.dropdownmembers .dropdown-menu {
+  width: 11vw;
+  height: 9vh;
+  font-size: 15px;
+}
+
+.joinleavebtns {
+  display: flex;
+  justify-content: center;
 }
