--- a/my-react-app/src/styling/homepage.scss
+++ b/my-react-app/src/styling/homepage.scss
@@ -1,7 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Courgette&display=swap");
+.home {
+  display: flex;
+  justify-content: center;
+}
 
 .home-header {
-  width: 100vw;
   display: flex;
   background-position: center;
   background-image: linear-gradient(
@@ -10,22 +12,23 @@
       rgba(0, 0, 0, 0.2)
     ),
     url("https://i.imgur.com/aEcGmgO.jpg");
-  background-repeat: no-repeat;
+  height: 100vh;
+  margin-top: 4vh;
+  margin-bottom: 1vh;
   background-size: cover;
   flex-direction: column;
   align-items: center;
-  height: 78vh;
+  height: 100vh;
   text-align: center;
   justify-content: center;
-  background-position: center calc(50% + 46px);
 }
 
 .headline {
   color: white;
-  font-weight: 700;
-  font-size: 4em;
+  font-weight: 500;
+  font-size: 3.2vw;
   position: relative;
-  top: 100px;
+  top: 8vh;
   width: 70%;
   animation-name: slide-in;
   animation-duration: 1s;
@@ -45,11 +48,10 @@
 }
 
 .head-author {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin-top: 1em;
-  font-weight: 400;
+  margin-top: 0.5em;
+  font-size: 1.5vw;
   position: relative;
-  top: 95px;
+  top: 9vh;
   color: white;
   animation-name: slide-in;
   animation-duration: 1s;
@@ -57,7 +59,16 @@
   opacity: 0;
 }
 
-.btn {
+.home-header button {
   position: relative;
-  top: 7em;
+  top: 11vh;
+  padding: 15px;
+  font-size: 20px;
+}
+@media only screen and (max-width: 768px) {
+  /* adjust button size and position for smaller screens */
+  .home-header button {
+    padding: 5px;
+    font-size: 8px;
+  }
 }
