--- a/my-react-app/src/styling/register.scss
+++ b/my-react-app/src/styling/register.scss
@@ -1,3 +1,55 @@
+.main-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 4vh;
+  align-items: center;
+  height: 80vh;
+  width: 100vw;
+}
+
+.form-body {
+  height: 70vh;
+  width: 25vw;
+  position: relative;
+  bottom: 5vh;
+  background-color: rgb(205, 203, 203);
+  padding: 20px 30px 0 30px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.form-control {
+  height: 30px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding: 1px;
+  position: relative;
+  top: 5vh;
+  font-size: 16px;
+}
+
+.form-control:focus {
+  outline: none;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+.form-btn {
+  width: 100%;
+  height: 50px;
+  position: relative;
+  top: 13vh;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.form-btn:active {
+  box-shadow: none;
+}
+
 .error {
-  font-family: sans-serif;
+  color: red;
+  font-family: "Orbitron", sans-serif;
+  font-weight: bold;
 }
