--- a/my-react-app/src/styling/userpage.scss
+++ b/my-react-app/src/styling/userpage.scss
@@ -1,75 +1,52 @@
-.profile-container {
+.userpage {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin: 2rem;
+  margin-top: 2.9vh;
+  margin-bottom: 2vh;
+}
+
+.usercontainer {
+  height: 100%;
+  margin-left: 1.1vw;
 }
 
 .profile-details {
-  margin: 1rem;
   border: 1px solid #ccc;
   padding: 1rem;
   border-radius: 5px;
-  width: 30em;
-}
+  position: relative;
+  width: 32vw;
+  margin: 10px 0 10px 0;
 
-.profile-details li {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 0.5rem;
-}
+  li {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0.5rem;
+  }
 
-.profile-details strong {
-  margin-right: 0.5rem;
-}
+  strong {
+    margin-right: 0.5rem;
+  }
 
-.profile-details input {
-  margin-left: 0.5rem;
+  input {
+    margin-left: 0.5rem;
+  }
 }
 
 .normal-img {
-  width: 150px;
-  height: 150px;
-  margin-left: 5rem;
+  max-width: 40%;
+  height: auto;
+  margin-left: 3em;
   border-radius: 50%;
 }
 
 .preview-img {
-  width: 130px;
-  height: 130px;
-  margin-left: 16em;
   border-radius: 50%;
-}
-.profile-details button {
-  margin: 0.5rem;
-}
-
-.group-box {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  margin: 1rem;
-  padding: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 50em;
-}
-
-.group-details {
-  display: flex;
-  flex-direction: column;
-  margin-right: 1rem;
-}
-
-.group-details div {
-  margin: 0.5rem;
-}
-
-.group-details a {
-  text-decoration: none;
-  color: #333;
+  max-width: 40%;
+  position: relative;
+  left: 16vw;
+  bottom: 5vh;
 }
 
 .group-delete {
@@ -77,18 +54,70 @@
   align-items: center;
 }
 
-.group-delete button {
+.delete-button {
   background-color: #f44336;
   color: #fff;
   border: none;
   border-radius: 5px;
   padding: 0.5rem;
   margin: 0.5rem;
+  margin: auto;
 }
-.group-delete button:hover {
+.delete-button:hover {
   background-color: #fff;
   color: #f44336;
   border: 1px solid #f44336;
+}
+
+li button {
+  border: none;
+  background-color: #266388;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 5px 0 0 0;
+  font-size: 1rem;
+}
+
+li button:hover {
+  background-color: #1a4f6c;
+}
+
+.listBtn {
+  position: relative;
+  top: 8vh;
+}
+.creategroupcontainer {
+  position: absolute;
+  display: flex;
+  left: 65.9vw;
+  bottom: 42vh;
+  justify-content: end;
+  height: 45vh;
+}
+
+.creategroupcontainer .card {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 32vw;
+  height: 50vh;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+@media only screen and (max-width: 768px) {
+  .creategroupcontainer .card {
+    height: 45vh;
+    width: 35vw;
+  }
+  .creategroupcontainer {
+    left: 58vw;
+  }
+}
+
+.dropdown-menu {
+  max-height: 200px;
+  overflow-y: scroll;
 }
 
 .list-form {
@@ -105,55 +134,76 @@
   border: 1px solid #ccc;
 }
 
-.listBtn {
-  margin: 0.5rem;
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
-  border: none;
-  background-color: #4caf50;
-  color: #fff;
+.groups-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* Optional: This centers the items horizontally */
 }
 
-.listBtn:hover {
-  cursor: pointer;
-  background-color: #3e8e41;
-}
-
-.dropdown-games {
-  margin: 0.5rem;
-  padding: 0.5rem;
-  border-radius: 5px;
+.group-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex: 1 0 32%; /* Optional: This sets the width of each item */
+  margin: 1em;
+  padding: 1rem;
+  max-width: 50%;
   border: 1px solid #ccc;
-  background-color: #fff;
-  color: #333;
+  border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.dropdown-menu {
-  max-height: 200px;
-  overflow-y: scroll;
+.group-details {
+  margin-right: 1em;
+  li {
+    margin-bottom: 0.5em;
+  }
+}
+.group-box:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transform: translateY(-4px);
+  transition: box-shadow 0.2s ease-in-out;
+  overflow: hidden;
+  position: relative;
+  transition: all 0.2s ease-in-out;
 }
 
-.scrollable-menu {
+.group-delete {
   display: flex;
-  flex-direction: column;
-  padding: 0;
-  margin: 0;
+  align-items: center;
 }
 
-.dropdown-item:hover {
-  cursor: pointer;
-  background-color: #f2f2f2;
+.userpage a {
+  text-decoration: none;
 }
 
-.dropdown-item:focus {
-  background-color: #f2f2f2;
+.owner-username {
+  color: #007bff !important;
+  text-decoration: none;
 }
 
-.profile-container {
-  display: flex;
-  flex-direction: column;
+.owner-username:hover {
+  text-decoration: underline;
+  color: #0266d1 !important;
 }
 
-.previewimg {
-  margin-left: 20px;
+.group-box ul li {
+  color: black;
+  text-decoration: none !important;
+}
+
+.group-details a {
+  color: black;
+  text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  .group-delete {
+    position: relative;
+    right: 2.5px;
+  }
+}
+
+.userpage span {
+  font-weight: bold;
 }
