--- a/my-react-app/src/styling/browse.scss
+++ b/my-react-app/src/styling/browse.scss
@@ -1,6 +1,13 @@
 .browsePage {
   margin-top: 2em;
-  background-color: black;
+  background-position: center;
+  background-size: cover;
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.2)
+    ),
+    url("https://wallpapercrafter.com/desktop1/549986-abstract-materail-design-material-style-polygon.jpg");
   min-height: calc(100vh - 12vh);
 }
 
@@ -52,7 +59,7 @@
 
 @media only screen and (max-width: 768px) {
   .game-card {
-    padding: 2vh 0 2vh 0;
+    padding: 2vh 2vw 2vh 2vw;
     width: 20em;
     font-size: 15px;
   }
