--- a/my-react-app/src/styling/gamepage.scss
+++ b/my-react-app/src/styling/gamepage.scss
@@ -1,7 +1,15 @@
 .gamePage {
   display: flex;
   margin-top: 2em;
-  background-color: black;
+  // background-color: black;
+  background-position: center;
+  background-size: cover;
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.2)
+    ),
+    url("https://wallpapercrafter.com/desktop1/549986-abstract-materail-design-material-style-polygon.jpg");
   justify-content: center;
 }
 
@@ -18,6 +26,7 @@
     display: flex;
     font-size: 3rem;
     margin-bottom: 10px;
+    // border-bottom: 1px solid #060606;
   }
 
   li {
@@ -103,4 +112,20 @@
 
 .exploreImg {
   max-width: 100%;
+}
+
+.loginjoin {
+  font-size: 1.1rem;
+}
+
+.groupstitle {
+  border-bottom: 2px solid black;
+}
+
+.likestext {
+  color: green;
+}
+
+.dislikestext {
+  color: rgb(175, 5, 5);
 }
