--- a/my-react-app/src/styling/grouppage.scss
+++ b/my-react-app/src/styling/grouppage.scss
@@ -2,7 +2,16 @@
   display: flex;
   margin-top: 27px;
   justify-content: center;
+  background: linear-gradient(135deg, #3f4c6b, #606c88);
   background-color: black;
+  background-position: center;
+  background-size: cover;
+  background-image: linear-gradient(
+      0deg,
+      rgba(87, 85, 85, 0.3),
+      rgba(0, 0, 0, 0.6)
+    ),
+    url("https://i.pinimg.com/originals/5c/29/be/5c29be5fa8bfe5f4c4d1d442e7739d2d.jpg");
 }
 .groupscard {
   display: flex;
@@ -12,16 +21,17 @@
 .group-info-section {
   border-bottom: 1px solid #ccc;
   padding: 5px 0;
+  margin-top: 5px;
 }
 .groupEdit {
-  background-color: #4caf50;
+  background-color: #347a36;
   border: none;
   color: white;
   padding: 6px 12px;
   text-align: center;
   text-decoration: none;
   font-size: 14px;
-  margin-top: 10px;
+  margin-top: 14px;
   margin-bottom: 4px;
   border-radius: 5px;
   cursor: pointer;
@@ -37,7 +47,6 @@
 }
 
 .cardetails {
-  background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   background-color: #fff;
@@ -92,7 +101,7 @@
   top: 7vh;
   margin-bottom: 4vh;
   width: 13em;
-  background-color: #007bff;
+  background-color: #0260c5;
   transition: background-color 0.3s ease;
 }
 
@@ -105,7 +114,7 @@
   margin-top: 40px;
   font-size: 16px;
   width: 13em;
-  background-color: #007bff;
+  background-color: #014083;
   transition: background-color 0.3s ease;
 }
 
@@ -114,25 +123,8 @@
   background-color: #0062cc;
 }
 
-@media only screen and (max-width: 768px) {
-  .leavebtn {
-    width: 10em;
-    margin-left: 1.5em;
-  }
-  .leavebtn {
-    width: 10em;
-    margin-left: 1.5em;
-  }
-  .submitbtn {
-    margin-left: 7vw;
-  }
-  .inputmessage .form-control {
-    margin-top: 6vh;
-  }
-}
-
 .savebtn {
-  background-color: #007bff;
+  background-color: #024790;
   border: none;
   color: #fff;
   padding: 10px;
@@ -148,7 +140,7 @@
 }
 
 .cancelbtn {
-  background-color: #007bff;
+  background-color: #024790;
   border: none;
   color: #fff;
   padding: 10px;
@@ -183,13 +175,10 @@
   font-size: 15px;
   cursor: pointer;
   position: relative;
-  right: 31px;
-  transition: background-color 0.2s ease-out;
+  right: 5px;
 }
 
 .memberuser a {
-  position: relative;
-  right: 33px;
   text-decoration: none;
   color: #007bff;
 }
@@ -200,10 +189,9 @@
 }
 
 .member img {
-  width: 30px;
-  height: 30px;
-  margin-left: 2em;
-  margin-right: 5px;
+  width: 25px;
+  height: 25px;
+  margin-right: 3px;
   border-radius: 50%;
 }
 
@@ -215,7 +203,7 @@
 }
 .ownertext {
   position: relative;
-  top: 10px;
+  top: 15px;
   font-weight: bold;
 }
 
@@ -230,30 +218,8 @@
 .inputmessage .form-control {
   height: 12vh;
   width: 44vw;
-}
-
-@media (max-width: 768px) {
-  .inputmessage .form-control {
-    width: 18vw;
-    height: 3em;
-  }
-  .submitbtn {
-    height: 3em;
-    left: -6vw;
-    top: 11vh;
-    width: 5em;
-  }
-  .owner-info a {
-    font-size: 13px;
-  }
-  .dropdownmembers button {
-    padding: 0 1px 0 1px;
-    height: 6vh;
-    font-size: 8px;
-  }
-  .leavebtn {
-    margin-top: 2em;
-  }
+  top: 4.7vh;
+  position: relative;
 }
 
 .owner-info {
@@ -277,8 +243,10 @@
   }
 
   img {
-    width: 5vw;
+    width: 4vw;
     height: auto;
+    margin-top: 5px;
+    margin-right: 9px;
     border-radius: 50%;
   }
 }
@@ -332,41 +300,6 @@
 }
 .submitbtn:active {
   transform: scale(0.9);
-}
-
-@media (max-width: 768px) {
-  .inputmessage .form-control {
-    width: 20vw;
-    height: 3em;
-  }
-  .removeMember {
-    width: 4vw;
-    max-height: 2.5vh;
-    bottom: 1px;
-  }
-  .member img {
-    width: 25px;
-    height: auto;
-  }
-
-  .submitbtn {
-    height: 3em;
-    left: -6vw;
-    top: 11vh;
-    width: 6em;
-  }
-  .owner-info a {
-    font-size: 13px;
-  }
-  .dropdownmembers button {
-    padding: 0 1px 0 1px;
-    height: 50px;
-    width: 70px;
-    font-size: 10px;
-  }
-  .leavebtn {
-    margin-top: 2em;
-  }
 }
 
 .likestext {
@@ -492,5 +425,79 @@
   }
   100% {
     transform: translateX(0);
+  }
+}
+
+.usertitle,
+.ownertitle {
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  margin-bottom: 1.4em;
+  border-bottom: 2px solid black;
+  font-size: 1.3em;
+  font-weight: bold;
+  margin-bottom: 1.8em;
+  color: #333; /* Change color as desired */
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+}
+
+@media (max-width: 768px) {
+  .inputmessage .form-control {
+    width: 20vw;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    font-size: 8px;
+    height: 3em;
+    margin-top: 6vh;
+  }
+  .leavebtn {
+    width: 10em;
+    margin-left: 1.5em;
+  }
+  .usertitle,
+  .ownertitle {
+    font-size: 15px;
+  }
+  .removeMember {
+    width: 20px;
+    height: 21px !important;
+    bottom: 3px;
+  }
+  .member img {
+    width: 25px;
+    height: auto;
+  }
+  .submitbtn {
+    left: -6vw;
+    top: 12vh;
+    height: 10vh;
+    width: 5.5em;
+    margin-left: 7vw;
+  }
+
+  .owner-info a {
+    font-size: 13px;
+  }
+
+  .leavebtn {
+    margin-top: 2em;
+  }
+
+  .inputmessage .form-control {
+    width: 18vw;
+    height: 3em;
+  }
+
+  .owner-info a {
+    font-size: 13px;
+  }
+  .dropdownmembers button {
+    padding: 0 1px 0 1px;
+    height: 6vh;
+    font-size: 8px;
+  }
+  .leavebtn {
+    margin-top: 2em;
   }
 }
