--- a/my-react-app/src/styling/navbar.scss
+++ b/my-react-app/src/styling/navbar.scss
@@ -40,6 +40,8 @@ ul {
     width: 30px;
     max-width: 80%;
     height: 30px;
+    position: relative;
+    left: 12px;
     border-radius: 50%;
   }
 }
@@ -67,7 +69,7 @@ ul {
   color: black !important;
   cursor: pointer;
   font-weight: 600;
-  margin-right: 1em;
+  margin-left: 10px;
   transition: all 0.2s ease-in-out;
 }
 
@@ -84,7 +86,7 @@ ul {
 footer {
   height: 11vh;
   width: 98.8vw;
-  background-color: #266388;
+  background-color: #1e274d;
   position: relative;
   bottom: 0;
   display: flex;
@@ -108,6 +110,7 @@ footer {
 @media only screen and (max-width: 768px) {
   .secondary-nav img {
     width: 24px;
+    left: 3em;
     height: auto;
   }
   .navitem {
@@ -125,7 +128,9 @@ footer {
     margin-right: 14px;
   }
   .secondary-nav a {
-    margin-right: 2em;
+    margin-right: 1em;
+    position: relative;
+    left: 30px;
   }
   footer {
     height: 0vh;
@@ -163,4 +168,8 @@ ul.secondary-nav {
 .nav-item-logout {
   margin-top: 2.3px;
   margin-right: 3em;
+}
+
+.usernamenav {
+  width: 1vw;
 }
