--- a/my-react-app/src/styling/userpage.scss
+++ b/my-react-app/src/styling/userpage.scss
@@ -1,29 +1,42 @@
 .userpage {
   min-height: calc(100vh - 12vh);
   margin-top: 5vh;
-  background-color: black;
+  background: linear-gradient(135deg, #414e6b, #606c88);
+  // background: linear-gradient(to bottom right, #4568dc, #b06ab3);
+  // background-position: center;
+  // background-size: cover;
+  // background-image: linear-gradient(
+  //     0deg,
+  //     rgba(0, 0, 0, 0.2),
+  //     rgba(0, 0, 0, 0.2)
+  //   ),
+  //   url("https://wallpaperaccess.com/full/974166.jpg");
+  // min-height: calc(100vh - 12vh);
 }
 
 .usercontainer {
   height: 100%;
   position: relative;
-  top: 8em;
+  top: 6em;
   margin-left: 1.4vw;
 }
 
 .profile-details {
   background-color: rgb(254, 254, 254);
   border: 1px solid #ccc;
+  position: relative;
   padding: 1rem;
-  height: 18vh;
+  height: 15vh;
+  top: 10px;
   border-radius: 5px;
   width: 32vw;
-  margin: 10px 0 20px 0;
+  margin: 10px 0 17px 0;
 
   li {
     display: flex;
     flex-direction: row;
     align-items: center;
+
     margin: 0.5rem;
   }
 
@@ -37,10 +50,19 @@
 }
 
 .normal-img {
-  max-width: 35%;
-  height: auto;
+  max-width: 25%;
+  position: relative;
   margin-left: 3em;
+  bottom: 11px;
   border-radius: 50%;
+}
+@media (min-width: 1800px) {
+  .normal-img {
+    max-width: 25%;
+  }
+  .profile-details {
+    height: 17vh;
+  }
 }
 
 .preview-img {
@@ -61,7 +83,7 @@
 }
 
 .delete-button {
-  background-color: #f44336;
+  background-color: #c8352b;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -70,13 +92,12 @@
 }
 .delete-button:hover {
   background-color: #fff;
-  color: #f44336;
-  border: 1px solid #f44336;
+  border: 1px solid #91271f;
 }
 .editButtons {
   li button {
     border: none;
-    background-color: #266388;
+    background-color: rgb(156, 140, 110);
     color: #fff;
     padding: 10px 20px;
     border-radius: 4px;
@@ -85,7 +106,7 @@
     font-size: 1rem;
   }
   li button:hover {
-    background-color: #1a4f6c;
+    background-color: rgb(104, 93, 73);
   }
   li button:active {
     transform: scale(0.9);
@@ -102,14 +123,14 @@
 }
 .creategroupcontainer {
   position: relative;
-  bottom: 35em;
+  bottom: 60vh;
   left: 63vw;
 }
 .creategroupcontainer .card {
   border: 1px solid #ccc;
   border-radius: 5px;
   width: 34vw;
-  bottom: 1em;
+  top: 1em;
   position: relative;
   background-color: rgb(255, 255, 255);
   height: 48vh;
@@ -141,7 +162,7 @@
   flex-wrap: wrap;
   overflow-wrap: break-word;
   position: relative;
-  bottom: 25vh;
+  bottom: 22vh;
   left: 2px;
 }
 
@@ -156,7 +177,6 @@
   background-color: rgb(254, 254, 254);
   border: 1px solid #ccc;
   border-radius: 5px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .group-details {
@@ -211,38 +231,36 @@
   .userpage {
     font-size: 12px;
   }
-  .dropdown button {
-    padding-right: 5px;
-    font-size: 10px;
-  }
+
   .form-group button {
-    width: 7em;
-    font-size: 10px;
-    margin-top: -13px;
+    top: 5.5em;
   }
   .creategroupcontainer .card {
     padding-bottom: 24em;
     top: 5em;
     right: 8px;
   }
+
+  .userpage button {
+    width: 11em;
+    font-size: 10px !important;
+  }
+
   .form-group input {
     width: 11.5em;
     font-size: 9px;
   }
   .normal-img {
-    margin-left: 4.5em;
-  }
-  .selectgamebtn {
-    width: 9.7em;
-    font-size: 2px;
+    top: 0;
   }
   .profile-details {
-    height: 7em;
+    font-size: 9px;
   }
   .error-create {
     width: 15em;
-    top: 45vh;
-    margin-left: -55px;
+    top: 40vh;
+    font-size: 10px !important;
+    margin-left: -4em;
   }
   .error-user {
     margin-top: 2px;
@@ -254,17 +272,6 @@
   }
 }
 
-// @media screen and (min-width: 900px) {
-//   .creategroupcontainer .card {
-//     padding-bottom: 20em;
-//     top: 10vh;
-//   }
-// }
-// @media screen and (min-width: 700px) {
-//   .creategroupcontainer .card {
-//     padding-bottom: 40vh;
-//   }
-// }
 .userpage span {
   font-weight: bold;
 }
@@ -272,10 +279,11 @@
 .error-create {
   position: absolute;
   color: red;
-  left: 11.5vw;
-  bottom: 12vh;
+  text-align: center;
+  bottom: 7vh;
+  right: 5vw;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 18px;
   animation-name: shake;
   animation-duration: 0.3s;
   animation-iteration-count: 3;
@@ -283,7 +291,9 @@
 .error-user {
   color: red;
   font-weight: bold;
-  font-size: 14px;
+  text-align: center;
+  margin-top: 10px;
+  font-size: 18px;
   animation-name: shake;
   animation-duration: 0.3s;
   animation-iteration-count: 3;
@@ -305,4 +315,15 @@
   100% {
     transform: translateX(0);
   }
+}
+
+.userpagetitle {
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  bottom: 2em;
+  border-bottom: 2px solid rgb(8, 8, 8);
+  font-size: 1.3em;
+  color: #070707; /* Change color as desired */
+  text-transform: uppercase;
 }
