--- a/my-react-app/src/styling/browse.scss
+++ b/my-react-app/src/styling/browse.scss
@@ -71,9 +71,11 @@
 .game-card:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transform: translateY(-4px);
+
+  transition: all 0.3s ease-in-out;
 }
 .game-card:active {
-  transform: scale(0.9);
+  transform: scale(0.95);
 }
 .game-image {
   height: auto;
@@ -100,14 +102,33 @@
 }
 
 .games-grid .game-card .officialLink {
-  color: black;
-  font-size: 1.5rem;
-  text-decoration: underline;
-  display: block;
-  margin-top: 0.5rem;
-  transition: color 0.2s ease-in-out;
+  color: #000;
+  font-size: 21px;
+  text-decoration: none;
+  position: relative;
+  display: inline-block;
+  transition: all 0.3s ease;
 }
 
-.games-grid .game-card .officialLink:hover {
-  color: #007bff;
+.games-grid .game-card .officialLink::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 100%;
+  height: 2px;
+  background: #000000;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: all 0.3s ease;
+}
+
+.games-grid .game-card .officialLink:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+.games-grid .game-card .officialLink:active {
+  transform: translateY(2px);
+  color: #ff4500;
 }
