--- a/my-react-app/src/styling/gamepage.scss
+++ b/my-react-app/src/styling/gamepage.scss
@@ -103,7 +103,7 @@
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
   }
   ul:active {
-    transform: scale(0.9);
+    box-shadow: 0 0 10px #000;
   }
   a {
     text-decoration: none;
@@ -128,4 +128,24 @@
 
 .dislikestext {
   color: rgb(175, 5, 5);
+}
+
+.nogroups {
+  display: flex;
+  text-align: center;
+  position: relative;
+  top: 4em;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  font-size: 24px;
+  color: #0404036e;
+  text-shadow: 2px 2px 3px #403f3f76;
+}
+
+@media (max-width: 768px) {
+  .nogroups {
+    font-size: 16px;
+    top: 2em;
+  }
 }
