--- a/my-react-app/src/styling/grouppage.scss
+++ b/my-react-app/src/styling/grouppage.scss
@@ -17,6 +17,7 @@
   display: flex;
   justify-content: center;
   width: 90vw;
+  margin-top: 10px;
 }
 .group-info-section {
   border-bottom: 1px solid #ccc;
@@ -101,7 +102,7 @@
   top: 7vh;
   margin-bottom: 4vh;
   width: 13em;
-  background-color: #0260c5;
+  background-color: #0062cc;
   transition: background-color 0.3s ease;
 }
 
@@ -114,13 +115,13 @@
   margin-top: 40px;
   font-size: 16px;
   width: 13em;
-  background-color: #014083;
+  background-color: #0062cc;
   transition: background-color 0.3s ease;
 }
 
 .joinbtn:hover,
 .leavebtn:hover {
-  background-color: #0062cc;
+  background-color: #023c7a;
 }
 
 .savebtn {
@@ -298,6 +299,7 @@
 .removeMember:hover {
   background-color: #c82333;
 }
+
 .submitbtn:active {
   transform: scale(0.9);
 }
@@ -382,7 +384,7 @@
   position: relative;
   bottom: 1.2vh;
   right: 0.2vw;
-  opacity: 0.2;
+  opacity: 0.4;
   cursor: pointer;
   background-image: url("https://www.macmillandictionary.com/external/slideshow/full/emoji_thumbs-up_full.jpg");
   background-position: center;
@@ -394,39 +396,39 @@
   position: relative;
   bottom: 6px;
   left: 3px;
-  opacity: 0.2;
+  opacity: 0.4;
   cursor: pointer;
   background-image: url("https://www.macmillandictionary.com/external/slideshow/full/emoji_thumbs-down_full.jpg");
   background-position: center;
   background-size: cover;
 }
 
-.error {
-  color: red;
-  font-weight: bold;
-  font-size: 18px;
-  animation-name: shake;
-  animation-duration: 0.5s;
-  animation-iteration-count: 3;
-}
+// .error {
+//   color: red;
+//   font-weight: bold;
+//   font-size: 18px;
+//   animation-name: shake;
+//   animation-duration: 0.5s;
+//   animation-iteration-count: 3;
+// }
 
-@keyframes shake {
-  0% {
-    transform: translateX(0);
-  }
-  25% {
-    transform: translateX(10px);
-  }
-  50% {
-    transform: translateX(0);
-  }
-  75% {
-    transform: translateX(-10px);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
+// @keyframes shake {
+//   0% {
+//     transform: translateX(0);
+//   }
+//   25% {
+//     transform: translateX(10px);
+//   }
+//   50% {
+//     transform: translateX(0);
+//   }
+//   75% {
+//     transform: translateX(-10px);
+//   }
+//   100% {
+//     transform: translateX(0);
+//   }
+// }
 
 .usertitle,
 .ownertitle {
@@ -464,6 +466,9 @@
     height: 21px !important;
     bottom: 3px;
   }
+  .removeMember:active {
+    transform: scale(0.9) !important;
+  }
   .member img {
     width: 25px;
     height: auto;
@@ -492,12 +497,46 @@
   .owner-info a {
     font-size: 13px;
   }
-  .dropdownmembers button {
-    padding: 0 1px 0 1px;
-    height: 6vh;
+  .dropdownmembers .btn-secondary {
+    width: 8em;
+    height: 4vh;
     font-size: 8px;
   }
   .leavebtn {
     margin-top: 2em;
   }
+  .chatempty {
+    font-size: 16px !important;
+    top: 3em !important;
+  }
+}
+
+.chatempty {
+  display: flex;
+  text-align: center;
+  position: relative;
+  top: 5em;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  font-size: 24px;
+  color: #0404036e;
+  text-shadow: 2px 2px 3px #403f3f76;
+}
+
+.popups .btn-secondary {
+  width: 20em;
+}
+.popups .btn-secondary:active {
+  width: 20em;
+  transform: scale(0.9);
+}
+.popups {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 25px;
+}
+
+.dropdownmembers .btn-secondary:active {
+  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3);
 }
