--- a/my-react-app/src/styling/grouppage.scss
+++ b/my-react-app/src/styling/grouppage.scss
@@ -384,7 +384,7 @@
   position: relative;
   bottom: 1.2vh;
   right: 0.2vw;
-  opacity: 0.4;
+  opacity: 0.2;
   cursor: pointer;
   background-image: url("https://www.macmillandictionary.com/external/slideshow/full/emoji_thumbs-up_full.jpg");
   background-position: center;
@@ -396,39 +396,12 @@
   position: relative;
   bottom: 6px;
   left: 3px;
-  opacity: 0.4;
+  opacity: 0.2;
   cursor: pointer;
   background-image: url("https://www.macmillandictionary.com/external/slideshow/full/emoji_thumbs-down_full.jpg");
   background-position: center;
   background-size: cover;
 }
-
-// .error {
-//   color: red;
-//   font-weight: bold;
-//   font-size: 18px;
-//   animation-name: shake;
-//   animation-duration: 0.5s;
-//   animation-iteration-count: 3;
-// }
-
-// @keyframes shake {
-//   0% {
-//     transform: translateX(0);
-//   }
-//   25% {
-//     transform: translateX(10px);
-//   }
-//   50% {
-//     transform: translateX(0);
-//   }
-//   75% {
-//     transform: translateX(-10px);
-//   }
-//   100% {
-//     transform: translateX(0);
-//   }
-// }
 
 .usertitle,
 .ownertitle {
@@ -446,15 +419,19 @@
 
 @media (max-width: 768px) {
   .inputmessage .form-control {
-    width: 20vw;
+    width: 28vw !important;
     padding-top: 25px;
     padding-bottom: 25px;
     font-size: 8px;
     height: 3em;
     margin-top: 6vh;
   }
+  .joinbtn {
+    font-size: 11px;
+  }
   .leavebtn {
     width: 10em;
+    font-size: 11px;
     margin-left: 1.5em;
   }
   .usertitle,
@@ -462,7 +439,7 @@
     font-size: 15px;
   }
   .removeMember {
-    width: 20px;
+    width: 20px !important;
     height: 21px !important;
     bottom: 3px;
   }
@@ -476,8 +453,9 @@
   .submitbtn {
     left: -6vw;
     top: 12vh;
-    height: 10vh;
-    width: 5.5em;
+    font-size: 10px !important;
+    height: 8vh;
+    width: 6.4em;
     margin-left: 7vw;
   }
 
@@ -499,7 +477,7 @@
   }
   .dropdownmembers .btn-secondary {
     width: 8em;
-    height: 4vh;
+    height: 5vh;
     font-size: 8px;
   }
   .leavebtn {
@@ -520,6 +498,7 @@
   align-items: center;
   text-transform: uppercase;
   font-size: 24px;
+  font-style: italic;
   color: #0404036e;
   text-shadow: 2px 2px 3px #403f3f76;
 }
