--- a/my-react-app/src/styling/grouppage.scss
+++ b/my-react-app/src/styling/grouppage.scss
@@ -170,13 +170,14 @@
 .removeMember {
   background-color: #dc3545;
   color: #fff;
-  padding: 0 8px 0 8px;
   border-radius: 0.25rem;
   border: none;
-  font-size: 15px;
+  width: 17px;
+  font-size: 14px;
   cursor: pointer;
+  top: 1.2px;
   position: relative;
-  right: 5px;
+  left: 7.3em;
 }
 
 .memberuser a {
@@ -351,7 +352,7 @@
 
 .likeDislikebtns {
   width: 18em;
-  top: 48px;
+  top: 80px;
   position: relative;
 }
 
@@ -434,6 +435,7 @@
   .removeMember {
     width: 20px !important;
     height: 21px !important;
+    left: 0;
     bottom: 3px;
   }
   .removeMember:active {
@@ -470,6 +472,8 @@
   }
   .dropdownmembers .btn-secondary {
     width: 8em;
+    position: relative;
+    bottom: 4em;
     height: 5vh;
     font-size: 8px;
   }
@@ -490,7 +494,7 @@
   justify-content: center;
   align-items: center;
   text-transform: uppercase;
-  font-size: 24px;
+  font-size: 28px;
   font-style: italic;
   color: #0404036e;
   text-shadow: 2px 2px 3px #403f3f76;
@@ -517,15 +521,14 @@
   border: none !important;
   background-color: transparent !important;
   padding: 0 !important;
+  font-size: 13px;
   color: #007bff !important;
   cursor: pointer !important;
-}
-
-.member-link:active {
   width: 0px;
-  transform: scale(1.1);
 }
-
+.member-link:active {
+  color: red;
+}
 .member-link:hover {
   text-decoration: underline;
   color: #0266d1 !important;
@@ -536,4 +539,9 @@
   --bs-dropdown-link-active-color: none !important;
   --bs-dropdown-link-active-bg: none !important;
   --bs-dropdown-link-disabled-color: none !important;
+}
+
+.dropdownmembers .dropdown-item {
+  position: relative;
+  right: 11px;
 }
