--- a/my-react-app/src/styling/main.scss
+++ b/my-react-app/src/styling/main.scss
@@ -1,4 +1,4 @@
-@import "./navBar.scss";
+@import "./navbarfooter.scss";
 @import "./homepage.scss";
 @import "./browse.scss";
 @import "./gamepage.scss";
@@ -10,29 +10,3 @@
 * {
   font-family: "Orbitron", sans-serif;
 }
-// .error {
-//   color: red;
-//   font-weight: bold;
-//   font-size: 18px;
-//   animation-name: shake;
-//   animation-duration: 0.5s;
-//   animation-iteration-count: 3;
-// }
-
-// @keyframes shake {
-//   0% {
-//     transform: translateX(0);
-//   }
-//   25% {
-//     transform: translateX(10px);
-//   }
-//   50% {
-//     transform: translateX(0);
-//   }
-//   75% {
-//     transform: translateX(-10px);
-//   }
-//   100% {
-//     transform: translateX(0);
-//   }
-// }
