--- a/my-react-app/src/styling/browse.scss
+++ b/my-react-app/src/styling/browse.scss
@@ -63,6 +63,9 @@
     width: 20em;
     font-size: 15px;
   }
+  .pagination {
+    margin-right: 35px;
+  }
   .games-container {
     margin-left: 4em;
   }
