--- a/my-react-app/src/styling/gamepage.scss
+++ b/my-react-app/src/styling/gamepage.scss
@@ -152,6 +152,12 @@
   .subtitle {
     font-size: 17px !important;
   }
+  .gamePage .card {
+    width: 30em !important;
+    span {
+      font-size: 20px;
+    }
+  }
   .gamePage .card .card-body li {
     font-size: 15px;
   }
