--- a/my-react-app/src/styling/register.scss
+++ b/my-react-app/src/styling/register.scss
@@ -9,8 +9,8 @@
 }
 
 .form-body-register {
-  height: 90vh;
-  width: 40vw;
+  height: 55em;
+  width: 45em;
   position: relative;
   display: flex;
   justify-content: center;
@@ -32,8 +32,8 @@
 
   input {
     font-size: 15px;
-    width: 28vw;
-    height: 5vh;
+    width: 28em;
+    height: 4em;
     text-align: center;
   }
 }
@@ -54,7 +54,7 @@
 }
 
 .registerbtn button {
-  width: 15.6vw;
+  width: 15vw;
   height: 50px;
   position: relative;
   top: 9.3vh;
@@ -71,13 +71,13 @@
 
 @media only screen and (max-width: 768px) {
   .form-body-register {
-    width: 20em;
-    height: 30em;
+    width: 25em;
+    height: 35em;
     .registerbtn button {
-      width: 6rem;
+      width: 8em;
       height: 40px;
       top: 4rem;
-      font-size: 10px;
+      font-size: 14px;
     }
     .registertitle {
       font-size: 20px;
@@ -85,8 +85,8 @@
     }
     input {
       top: 4.5em;
-      width: 15em;
-      height: 2.2em;
+      width: 18em;
+      height: 2.5em;
       font-size: 13px;
     }
 
@@ -101,6 +101,7 @@
   font-size: 40px;
   position: relative;
   top: 2rem;
+  color: white;
   text-transform: uppercase;
   border-bottom: 2px solid #0d0d0d;
 }
@@ -120,9 +121,12 @@
     margin-bottom: 15em;
   }
   .form-body-register input {
-    width: 24vw;
+    width: 30em;
   }
-
+  .form-body-register {
+    height: 65em;
+    width: 55em;
+  }
   .registerbtn button {
     width: 17rem;
   }
