--- a/my-react-app/src/styling/grouppage.scss
+++ b/my-react-app/src/styling/grouppage.scss
@@ -16,7 +16,7 @@
 .groupscard {
   display: flex;
   justify-content: center;
-  width: 90vw;
+  width: 85vw;
   margin-top: 10px;
 }
 .group-info-section {
@@ -213,13 +213,13 @@
   position: relative;
   width: 9vw;
   top: 5vh;
-  left: 0.8vw;
+  left: 19px;
   height: 11.5vh;
 }
 
 .inputmessage .form-control {
   height: 12vh;
-  width: 44vw;
+  width: 40vw;
   top: 4.7vh;
   position: relative;
 }
@@ -413,12 +413,15 @@
 
 @media (max-width: 768px) {
   .inputmessage .form-control {
-    width: 28vw !important;
+    width: 30em !important;
     padding-top: 25px;
     padding-bottom: 25px;
     font-size: 8px;
     height: 3em;
-    margin-top: 6vh;
+  }
+
+  .cardetails {
+    width: 100vw;
   }
   .joinbtn {
     font-size: 11px;
@@ -446,12 +449,11 @@
     height: auto;
   }
   .submitbtn {
-    left: -6vw;
-    top: 12vh;
+    bottom: 20em;
     font-size: 10px !important;
-    height: 8vh;
+    height: 4.7em;
+    margin-right: 20px;
     width: 6.4em;
-    margin-left: 7vw;
   }
 
   .owner-info a {
@@ -474,7 +476,7 @@
     width: 8em;
     position: relative;
     bottom: 4em;
-    height: 5vh;
+    height: 3em;
     font-size: 8px;
   }
   .leavebtn {
