--- a/my-react-app/src/styling/homepage.scss
+++ b/my-react-app/src/styling/homepage.scss
@@ -13,7 +13,6 @@
       rgba(0, 0, 0, 0.2)
     ),
     url("https://i.imgur.com/aEcGmgO.jpg");
-  height: 100vh;
   background-size: cover;
   flex-direction: column;
   align-items: center;
@@ -62,7 +61,7 @@
   position: relative;
   top: 11vh;
   padding: 15px;
-  font-size: 20px;
+  font-size: 17px;
 }
 .home-header button:active {
   transform: scale(0.9);
@@ -70,7 +69,14 @@
 @media only screen and (max-width: 768px) {
   /* adjust button size and position for smaller screens */
   .home-header button {
-    padding: 5px;
-    font-size: 8px;
+    padding: 10px;
+    font-size: 10px;
+  }
+  .headline {
+    font-size: 3.8vw;
+    width: 90%;
+  }
+  .head-author {
+    font-size: 2vw;
   }
 }
