--- a/my-react-app/src/styling/navbarfooter.scss
+++ b/my-react-app/src/styling/navbarfooter.scss
@@ -77,7 +77,7 @@ ul {
 }
 
 .donut {
-  margin: 9px 0 0 6px;
+  margin: 9px 0 0 2px;
   width: 2px;
 }
 
@@ -112,13 +112,9 @@ footer {
 
   .navitem {
     font-size: 15px;
-    height: 15vh;
-    margin-right: 18.5em;
+    right: 20px;
   }
 
-  .donut {
-    margin-left: 1px;
-  }
   .foot {
     width: 100%;
     height: 10vh;
