--- a/my-react-app/src/styling/browse.scss
+++ b/my-react-app/src/styling/browse.scss
@@ -2,6 +2,7 @@
   margin-top: 2em;
   background-position: center;
   background-size: cover;
+  width: 100%;
   background-image: linear-gradient(
       0deg,
       rgba(0, 0, 0, 0.2),
@@ -24,6 +25,7 @@
 .page-item {
   margin-top: 4vh;
 }
+
 .page-item:active {
   transform: scale(0.9);
 }
@@ -60,21 +62,24 @@
 @media only screen and (max-width: 768px) {
   .game-card {
     padding: 2vh 2vw 2vh 2vw;
-    width: 20em;
     font-size: 15px;
+    width: 70vw;
+    img {
+      width: 15em;
+    }
   }
-  .pagination {
-    margin-right: 35px;
-  }
-  .games-container {
-    margin-left: 4em;
+  .games-grid {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 
 .game-card:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transform: translateY(-4px);
-
   transition: all 0.3s ease-in-out;
 }
 .game-card:active {
