--- a/my-react-app/src/styling/login.scss
+++ b/my-react-app/src/styling/login.scss
@@ -107,7 +107,7 @@
 
 @media only screen and (max-width: 768px) {
   .form-body-login {
-    width: 25em;
+    width: 90vw;
     height: 35em;
   }
   .buttonandsignup {
